--- a/apps/todo/index.html
+++ b/apps/todo/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <ul class="list-group todos mx-auto text-light">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
+      <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
         <span>play mariokart</span>
         <i class="far fa-trash-alt delete"></i>
       </li>
@@ -34,7 +34,7 @@
       <li class="list-group-item d-flex justify-content-between align-items-center">
         <span>make a veggie pie</span>
         <i class="far fa-trash-alt delete"></i>
-      </li>
+      </li> -->
     </ul>
 
     <form class="add text-center my-4">
